final/assets/css/page4.css
:root {
    --bgcolor: #e6e1dc;
    --dgray: #4d4b4a;
    --lgray: #969290;
}

* {
    font-family: "Karla";
    color: var(--dgray);
    line-height: 1.8;
    margin: 0;
    padding: 0;
}

body {
    background: var(--bgcolor);
    -webkit-animation: fadeIn .5s ease-in-out;
    animation: fadeIn .5s ease-in-out;
    overflow: hidden;
}

h1 {
    font-family: "Poppins";
    font-size: 60px;
    padding-top: 100px;
    padding-bottom: 70px;
}

h2 {
    font-size: 50px;
    font-weight: 200;
}

.dropdown-container {
    display: flex;
    flex-direction: row;

    justify-content: center;
    align-items: center;
}

.dropdown-col {
    display: flex;
    flex-direction: column;
    
}

.dropdown-col div {

    width: 450px;

    margin-left: 40px;
    margin-right: 40px;
}

.content {
    height: 100vh;
    margin-left: 100px;
    margin-right: 100px;

    display: flex;
    flex-direction: column;
}

.circle-button {
    display: flex;
    width: 300px;
    min-width: 300px;
    height: 300px;
    background-color: var(--dgray);
    
    justify-content: center;
    align-items: center;

    margin: 50px 75px;
    border-radius: 50%;
    text-decoration: none;
}

.circle-button:hover {
    animation: grow-shrink 0.5s infinite alternate;
}

.circle-button h1 {
    font-size: 100px;
    font-weight: 200;
    line-height: 1.2;
    color: #fff;
    text-decoration: none;
    text-align: center;
    margin: 50px;
}

.circle-button h2 {
    font-size: 50px;
    font-weight: 200;
    line-height: 1.2;
    color: #fff;
    text-decoration: none;
    text-align: center;
    margin: 50px;
}

.options {
    display: flex;
    flex-direction: row;
}

@keyframes grow-shrink {
    from {
        transform: scale(1);
    } to {
        transform: scale(1.1);
    }
}

@-webkit-keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

@keyframes fadeIn {
    from { 
        opacity: 0;
    } to { 
        opacity: 1; 
    }
}

